--- a/package.json
+++ b/package.json
@@ -4,8 +4,36 @@
   "workspaces": [
     "packages/*"
   ],
-  "dependencies": {},
   "devDependencies": {
+    "@commitlint/cli": "^16.0.1",
+    "@commitlint/config-conventional": "^16.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
+    "commitizen": "^4.2.4",
+    "conventional-changelog-cli": "^2.2.2",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^8.28.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-svelte3": "^4.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-config-next": "13.1.5",
+    "fbjs-scripts": "^3.0.1",
+    "husky": "^7.0.4",
+    "jest": "^27.4.7",
+    "nx": "^15.8.8",
+    "prettier": "^2.8.6",
+    "prettier-plugin-svelte": "^2.9.0",
+    "ts-jest": "^27.1.2",
+    "typescript": "^4.5.4",
     "lerna": "^8.1.9"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "dependencies": {
+    "eslint-config-next": "^13.2.3",
+    "eslint-config-prettier": "^8.7.0"
   }
 }
