--- a/packages/foodfly/package.json
+++ b/packages/foodfly/package.json
@@ -1,19 +1,27 @@
 {
   "name": "foodfly",
-  "version": "1.0.0",
-  "description": "> TODO: description",
-  "author": "Hossain K. M. <awarehossain@gmail.com>",
-  "homepage": "",
-  "license": "ISC",
-  "main": "lib/foodfly.js",
-  "directories": {
-    "lib": "lib",
-    "test": "__tests__"
-  },
-  "files": [
-    "lib"
-  ],
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "node ./__tests__/foodfly.test.js"
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "next": "15.1.5"
+  },
+  "devDependencies": {
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.5",
+    "@eslint/eslintrc": "^3"
   }
 }
