--- a/package.json
+++ b/package.json
@@ -4,6 +4,16 @@
   "workspaces": [
     "packages/*"
   ],
+  "scripts": {
+    "bootstrap": "lerna exec npm i",
+    "bootstrap:ci": "lerna exec npm ci -- --ignore-scripts",
+    "build": "lerna run build",
+    "clean": "lerna run clean",
+    "lint": "eslint . --ext .ts --fix --quiet",
+    "prepare": "husky install",
+    "prettier": "node node_modules/.bin/prettier --check \"**/*.{js,json,ts,yml,yaml}\"",
+    "prettier:write": "node node_modules/.bin/prettier --write \"**/*.{js,json,ts,yml,yaml}\""
+  },
   "devDependencies": {
     "@commitlint/cli": "^16.0.1",
     "@commitlint/config-conventional": "^16.0.0",
