--- a/package.json
+++ b/package.json
@@ -23,19 +23,19 @@
     "conventional-changelog-cli": "^2.2.2",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.28.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-svelte3": "^4.0.0",
-    "eslint-plugin-prettier": "^4.2.1",
     "eslint-config-next": "13.1.5",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-svelte3": "^4.0.0",
     "fbjs-scripts": "^3.0.1",
     "husky": "^7.0.4",
     "jest": "^27.4.7",
+    "lerna": "^8.1.9",
     "nx": "^15.8.8",
     "prettier": "^2.8.6",
     "prettier-plugin-svelte": "^2.9.0",
     "ts-jest": "^27.1.2",
-    "typescript": "^4.5.4",
-    "lerna": "^8.1.9"
+    "typescript": "^4.5.4"
   },
   "config": {
     "commitizen": {
@@ -43,6 +43,7 @@
     }
   },
   "dependencies": {
+    "@nx/devkit": "^20.3.2",
     "eslint-config-next": "^13.2.3",
     "eslint-config-prettier": "^8.7.0"
   }
